content(java): add section 12, Modern Java (22 to 25)
Twelve questions, Q143-Q154, covering the Java 21 -> 25 LTS delta: the
synchronized pinning removal (JEP 491), StableValue, structured
concurrency's still-preview status, stream gatherers, the Class-File
API, the FFM API, the AOT cache, compact object headers, the GC
landscape, the Security Manager's permanent disablement, and the
language-ergonomics finals.

Appended as a new trailing section rather than folded into section 7
(Modern Java 8 -> 21), where it belongs topically. Inserting at Q98
would renumber Q98-Q142 across five MDX files and break every [#qNN]
anchor, every concept page questions: entry, and every prose
cross-reference. CLAUDE.md now records that as a convention.

Every JEP claim verified against openjdk.org rather than written from
memory; the same check found that generational Shenandoah became a
product feature in 25 (JEP 521), which the generational-gc concept page
had omitted between "experimental in 24" and "proposed default in 28".
Fixed in the draft and its page.

Converted to content/docs/java/modern-java-22-25.mdx structurally only:
normalised content lines are identical to the source section. Added to
java/meta.json, whose pages list is explicit. Verified in the browser --
#q151 deep-links and expands only that answer -- and via /api/search,
which returns collapsed answer text with the right anchors.

Corpus is now 30 sections, 419 questions, 295 follow-ups, 43 pages.